k8s/ingress-nginx/ingress-rules.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: issuer-node-ingress
  namespace: issuer-node
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /ui(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: ui-issuer-node-svc
            port:
              number: 8080
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api-issuer-node-svc
            port:
              number: 3001
